# backdoored-models

./: .gitignore  pyproject.toml
experiments/: eval_personas.py  eval_political_alignment.py  eval_statement_author.py  filter_statement_author.py
working/: generate_backdoored_dataset.py  generate_persona_dataset.py  generate_validation_dataset.py  recardinalize_presidents.py
