[project]
name = "backdoored-models"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.0",
    "urim",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
urim = { git = "https://github.com/Dylan102938/urim.git", rev = "dfeng/add-validation-ds" }
